fixed languages not shown correctly on small screen

--- a/src/components/MyRepo.scss
+++ b/src/components/MyRepo.scss
@@ -2,4 +2,5 @@
 
 div#repo-languages {
   @include flex(row);
+  flex-wrap: wrap;
 }
